Added some information.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,15 +2,15 @@
     <div class="resume-section-content">
         <h1 class="mb-0">Mateus <span class="text-primary">Simon</span></h1>
 
-        <div class="subheading mb-5">Page in development... <a href="mailto:ms.mateus@hotmail.com">ms.mateus@hotmail.com</a></div>
+        <div class="subheading mb-5">Curitiba - PR, Brasil <a href="mailto:ms.mateus@hotmail.com">ms.mateus@hotmail.com</a></div>
         
-        <p class="lead mb-5">In development...</p>
+        <p class="lead mb-5">Java Developer | Software Engineer | Full Stack Developer</p>
         
         <div class="social-icons">
-            <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-            <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-            <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-            <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+            <a class="social-icon" href="https://www.linkedin.com/in/mateus-simon/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a class="social-icon" href="https://github.com/m4t3u2" target="_blank"><i class="fab fa-github"></i></a>
+            <!-- <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a> -->
+            <a class="social-icon" href="https://www.facebook.com/m4t3u2/" target="_blank"><i class="fab fa-facebook-f"></i></a>
         </div>
     </div>
 </section>
