--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -3,35 +3,43 @@
         <h2 class="mb-5">Experience</h2>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
-                <h3 class="mb-0">Experience 4</h3>
-                <div class="subheading mb-3">In development...</div>
-                <p>In development...</p>
+                <h3 class="mb-0">Java Developer</h3>
+                <div class="subheading mb-3">e-Governe Group</div>
+                <p>Analysis and development of multiple projects using the REST architectural style, among them, an educational management system for public schools, a system for automating processes in the tax area carried out by the municipal administration, an internal BI system, an internal audit system, a system for virtual desktop infrastructure (DaaS) management.</p>
             </div>
-            <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+            <div class="flex-shrink-0"><span class="text-primary">Feb 2020 - Present</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
-                <h3 class="mb-0">Experience 3</h3>
-                <div class="subheading mb-3">In development...</div>
-                <p>In development...</p>
+                <h3 class="mb-0">Java Developer</h3>
+                <div class="subheading mb-3">Wasys Technology</div>
+                <p>Development of RESTful Spring Boot APIs; Development of Java Web systems in JSF with PrimeFaces and Bootstrap; PostgreSQL Database Maintenance; Maintenance of Homologation and Production Servers.</p>
             </div>
-            <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+            <div class="flex-shrink-0"><span class="text-primary">Feb 2019 - Feb 2020</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
-                <h3 class="mb-0">Experience 2</h3>
-                <div class="subheading mb-3">In development...</div>
-                <p>In development...</p>
+                <h3 class="mb-0">Teacher</h3>
+                <div class="subheading mb-3">PIBID - Institutional Teaching Initiation Scholarship Program</div>
+                <p>Provide courses in the area of ​​information technology for elementary and high school students from public schools.</p>
             </div>
-            <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+            <div class="flex-shrink-0"><span class="text-primary">Oct 2016 - Dec 2018</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+                <h3 class="mb-0">Trainee</h3>
+                <div class="subheading mb-3">UENP - State University of Northern Paraná</div>
+                <p>Assistance to the academic community of the Technological Sciences Center (CCT). Maintenance of network infrastructure. Microcomputer maintenance. Creation of the CCT website. Maintenance of CCT's social networks.</p>
+            </div>
+            <div class="flex-shrink-0"><span class="text-primary">Sep 2014 - Sep 2016</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between">
             <div class="flex-grow-1">
-                <h3 class="mb-0">Experience 1</h3>
-                <div class="subheading mb-3">In development...</div>
-                <p>In development...</p>
+                <h3 class="mb-0">Monitor</h3>
+                <div class="subheading mb-3">UENP - State University of Northern Paraná</div>
+                <p>Monitor in the Programming discipline of Information Systems and Computer Science courses.</p>
             </div>
-            <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+            <div class="flex-shrink-0"><span class="text-primary">Mar 2014 - Jul 2014</span></div>
         </div>
     </div>
 </section>
