--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,22 +1,22 @@
 <section class="resume-section" id="education">
     <div class="resume-section-content">
         <h2 class="mb-5">Education</h2>
+        <div class="d-flex flex-column flex-md-row justify-content-between">
+            <div class="flex-grow-1">
+                <h3 class="mb-0">Pontifical Catholic University - PUC</h3>
+                <div class="subheading mb-3">Post-graduated in Software Architecture Distributed</div>
+                <p></p>
+            </div>
+            <div class="flex-shrink-0"><span class="text-primary">2022 - Present</span></div>
+        </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
                 <h3 class="mb-0">State University of Northern Paraná - UENP</h3>
-                <div class="subheading mb-3">Bachelor in Information Systems and Licentiate in Computing</div>
-                <div>In development...</div>
-                <p>In development...</p>
+                <div class="subheading mb-3">Graduated in Information Systems and Licensed in Computing </div>
+                <div></div>
+                <p></p>
             </div>
-            <div class="flex-shrink-0"><span class="text-primary">In development...</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between">
-            <div class="flex-grow-1">
-                <h3 class="mb-0">In development...</h3>
-                <div class="subheading mb-3">In development...</div>
-                <p>In development...</p>
-            </div>
-            <div class="flex-shrink-0"><span class="text-primary">In development...</span></div>
+            <div class="flex-shrink-0"><span class="text-primary">2013 - 2018</span></div>
         </div>
     </div>
 </section>
