--- a/src/app/interests/interests.component.html
+++ b/src/app/interests/interests.component.html
@@ -1,7 +1,7 @@
 <section class="resume-section" id="interests">
     <div class="resume-section-content">
         <h2 class="mb-5">Interests</h2>
-        <p>In development...</p>
-        <p class="mb-0">In development...</p>
+        <p>Learn Go Language!</p>
+        <!-- <p class="mb-0">Learn Go Language!</p> -->
     </div>
 </section>
