--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,10 +4,10 @@
 
         <div class="subheading mb-5">Curitiba - PR, Brasil <a href="mailto:ms.mateus@hotmail.com">ms.mateus@hotmail.com</a></div>
         
-        <p class="lead mb-5">Java Developer | Software Engineer | Full Stack Developer</p>
+        <p class="lead mb-5">Software Engineer - Mercado Livre</p>
         
         <div class="social-icons">
-            <a class="social-icon" href="https://www.linkedin.com/in/mateus-simon/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a class="social-icon" href="https://www.linkedin.com/in/mateus-simon" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             <a class="social-icon" href="https://github.com/m4t3u2" target="_blank"><i class="fab fa-github"></i></a>
             <!-- <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a> -->
             <a class="social-icon" href="https://www.facebook.com/m4t3u2/" target="_blank"><i class="fab fa-facebook-f"></i></a>
