--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -7,7 +7,7 @@
                 <div class="subheading mb-3">Post-graduated in Software Architecture Distributed</div>
                 <p></p>
             </div>
-            <div class="flex-shrink-0"><span class="text-primary">2022 - Present</span></div>
+            <div class="flex-shrink-0"><span class="text-primary">2022 - 2023</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
