--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -4,10 +4,18 @@
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
                 <h3 class="mb-0">Java Developer</h3>
+                <div class="subheading mb-3">Mercado Livre</div>
+                <p></p>
+            </div>
+            <div class="flex-shrink-0"><span class="text-primary">Mar 2023 - Present</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+                <h3 class="mb-0">Java Developer</h3>
                 <div class="subheading mb-3">e-Governe Group</div>
                 <p>Analysis and development of multiple projects using the REST architectural style, among them, an educational management system for public schools, a system for automating processes in the tax area carried out by the municipal administration, an internal BI system, an internal audit system, a system for virtual desktop infrastructure (DaaS) management.</p>
             </div>
-            <div class="flex-shrink-0"><span class="text-primary">Feb 2020 - Present</span></div>
+            <div class="flex-shrink-0"><span class="text-primary">Feb 2020 - Mar 2023</span></div>
         </div>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="flex-grow-1">
